--- a/PriceMatching/Main.xaml
+++ b/PriceMatching/Main.xaml
@@ -35,51 +35,52 @@
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
     <sco:Collection x:TypeArguments="AssemblyReference">
-      <AssemblyReference>System.Activities</AssemblyReference>
       <AssemblyReference>Microsoft.VisualBasic</AssemblyReference>
-      <AssemblyReference>System.Private.CoreLib</AssemblyReference>
+      <AssemblyReference>Microsoft.Win32.Primitives</AssemblyReference>
       <AssemblyReference>mscorlib</AssemblyReference>
-      <AssemblyReference>System.Data</AssemblyReference>
+      <AssemblyReference>NPOI</AssemblyReference>
+      <AssemblyReference>PresentationCore</AssemblyReference>
+      <AssemblyReference>PresentationFramework</AssemblyReference>
       <AssemblyReference>System</AssemblyReference>
-      <AssemblyReference>System.Linq</AssemblyReference>
-      <AssemblyReference>System.Data.Common</AssemblyReference>
-      <AssemblyReference>System.Drawing</AssemblyReference>
-      <AssemblyReference>System.Drawing.Primitives</AssemblyReference>
-      <AssemblyReference>System.Drawing.Common</AssemblyReference>
+      <AssemblyReference>System.Activities</AssemblyReference>
+      <AssemblyReference>System.Collections</AssemblyReference>
+      <AssemblyReference>System.ComponentModel</AssemblyReference>
+      <AssemblyReference>System.ComponentModel.EventBasedAsync</AssemblyReference>
+      <AssemblyReference>System.ComponentModel.Primitives</AssemblyReference>
+      <AssemblyReference>System.ComponentModel.TypeConverter</AssemblyReference>
+      <AssemblyReference>System.Configuration.ConfigurationManager</AssemblyReference>
+      <AssemblyReference>System.Console</AssemblyReference>
       <AssemblyReference>System.Core</AssemblyReference>
+      <AssemblyReference>System.Data</AssemblyReference>
+      <AssemblyReference>System.Data.Common</AssemblyReference>
+      <AssemblyReference>System.Data.DataSetExtensions</AssemblyReference>
+      <AssemblyReference>System.Data.SqlClient</AssemblyReference>
+      <AssemblyReference>System.Drawing</AssemblyReference>
+      <AssemblyReference>System.Drawing.Common</AssemblyReference>
+      <AssemblyReference>System.Drawing.Primitives</AssemblyReference>
+      <AssemblyReference>System.Linq</AssemblyReference>
+      <AssemblyReference>System.Memory</AssemblyReference>
+      <AssemblyReference>System.Memory.Data</AssemblyReference>
+      <AssemblyReference>System.ObjectModel</AssemblyReference>
+      <AssemblyReference>System.Private.CoreLib</AssemblyReference>
+      <AssemblyReference>System.Private.DataContractSerialization</AssemblyReference>
+      <AssemblyReference>System.Private.ServiceModel</AssemblyReference>
+      <AssemblyReference>System.Private.Uri</AssemblyReference>
+      <AssemblyReference>System.Private.Xml</AssemblyReference>
+      <AssemblyReference>System.Reflection.DispatchProxy</AssemblyReference>
+      <AssemblyReference>System.Reflection.Metadata</AssemblyReference>
+      <AssemblyReference>System.Reflection.TypeExtensions</AssemblyReference>
+      <AssemblyReference>System.Runtime.Serialization.Formatters</AssemblyReference>
+      <AssemblyReference>System.Runtime.Serialization.Primitives</AssemblyReference>
+      <AssemblyReference>System.Security.Permissions</AssemblyReference>
+      <AssemblyReference>System.Xaml</AssemblyReference>
       <AssemblyReference>System.Xml</AssemblyReference>
       <AssemblyReference>System.Xml.Linq</AssemblyReference>
-      <AssemblyReference>PresentationFramework</AssemblyReference>
-      <AssemblyReference>WindowsBase</AssemblyReference>
-      <AssemblyReference>PresentationCore</AssemblyReference>
-      <AssemblyReference>System.Xaml</AssemblyReference>
+      <AssemblyReference>UiPath.Studio.Constants</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities</AssemblyReference>
       <AssemblyReference>UiPath.UiAutomation.Activities</AssemblyReference>
-      <AssemblyReference>System.Data.DataSetExtensions</AssemblyReference>
-      <AssemblyReference>UiPath.Studio.Constants</AssemblyReference>
-      <AssemblyReference>System.Private.ServiceModel</AssemblyReference>
-      <AssemblyReference>System.Runtime.Serialization.Formatters</AssemblyReference>
-      <AssemblyReference>System.Private.DataContractSerialization</AssemblyReference>
-      <AssemblyReference>System.Runtime.Serialization.Primitives</AssemblyReference>
-      <AssemblyReference>System.Memory.Data</AssemblyReference>
-      <AssemblyReference>NPOI</AssemblyReference>
-      <AssemblyReference>System.ComponentModel.TypeConverter</AssemblyReference>
-      <AssemblyReference>System.Console</AssemblyReference>
-      <AssemblyReference>System.Configuration.ConfigurationManager</AssemblyReference>
-      <AssemblyReference>System.Security.Permissions</AssemblyReference>
-      <AssemblyReference>System.ComponentModel</AssemblyReference>
-      <AssemblyReference>System.Memory</AssemblyReference>
-      <AssemblyReference>System.Private.Uri</AssemblyReference>
-      <AssemblyReference>System.Reflection.DispatchProxy</AssemblyReference>
-      <AssemblyReference>System.Reflection.TypeExtensions</AssemblyReference>
-      <AssemblyReference>System.ObjectModel</AssemblyReference>
-      <AssemblyReference>System.Reflection.Metadata</AssemblyReference>
       <AssemblyReference>UiPath.Workflow</AssemblyReference>
-      <AssemblyReference>System.Data.SqlClient</AssemblyReference>
-      <AssemblyReference>System.ComponentModel.Primitives</AssemblyReference>
-      <AssemblyReference>System.Private.Xml</AssemblyReference>
-      <AssemblyReference>System.ComponentModel.EventBasedAsync</AssemblyReference>
-      <AssemblyReference>Microsoft.Win32.Primitives</AssemblyReference>
+      <AssemblyReference>WindowsBase</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <Sequence DisplayName="PRICE MATCHING Main Sequence" sap:VirtualizedContainerService.HintSize="449.6,532.8" sap2010:WorkflowViewState.IdRef="Sequence_1">
@@ -113,49 +114,23 @@
     </ui:InvokeWorkflowFile>
     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="dbtest(Autosaved).xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="387.2,113.6" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="dbtest(Autosaved).xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <InArgument x:TypeArguments="x:String" x:Key="itemQueryLSNew">
-          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="itemQuery" />
-        </InArgument>
-        <InArgument x:TypeArguments="x:String" x:Key="itemQueryVG">
-          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="itemListVG" />
-        </InArgument>
-        <InArgument x:TypeArguments="x:String" x:Key="itemQueryBig">
-          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="itemListBIG" />
-        </InArgument>
-        <OutArgument x:TypeArguments="sd:DataTable" x:Key="otkItemQueryResultDT">
-          <VisualBasicReference x:TypeArguments="sd:DataTable" ExpressionText="otkItemList" />
-        </OutArgument>
-        <OutArgument x:TypeArguments="sd:DataTable" x:Key="bigItemQueryResultDT">
-          <VisualBasicReference x:TypeArguments="sd:DataTable" ExpressionText="bigItemList" />
-        </OutArgument>
-        <OutArgument x:TypeArguments="sd:DataTable" x:Key="VGItemQueryResultDT">
-          <VisualBasicReference x:TypeArguments="sd:DataTable" ExpressionText="vgItemList" />
-        </OutArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="itemQueryLSNew">[itemQuery]</InArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="itemQueryVG">[itemListVG]</InArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="itemQueryBig">[itemListBIG]</InArgument>
+        <OutArgument x:TypeArguments="sd:DataTable" x:Key="otkItemQueryResultDT">[otkItemList]</OutArgument>
+        <OutArgument x:TypeArguments="sd:DataTable" x:Key="bigItemQueryResultDT">[bigItemList]</OutArgument>
+        <OutArgument x:TypeArguments="sd:DataTable" x:Key="VGItemQueryResultDT">[vgItemList]</OutArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="readPriceMatchingExcel.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="387.2,113.6" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False" WorkflowFileName="readPriceMatchingExcel.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <InArgument x:TypeArguments="x:String" x:Key="itemColLen">
-          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="itemColumnLength" />
-        </InArgument>
-        <InArgument x:TypeArguments="sd:DataTable" x:Key="otkFullDT">
-          <VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="otkfulldt" />
-        </InArgument>
-        <InArgument x:TypeArguments="sd:DataTable" x:Key="vgFullDT">
-          <VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="vgfulldt" />
-        </InArgument>
-        <InArgument x:TypeArguments="sd:DataTable" x:Key="bigFullDT">
-          <VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="bigfulldt" />
-        </InArgument>
-        <InArgument x:TypeArguments="sd:DataTable" x:Key="otkItemsListFromDB">
-          <VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="otkItemList" />
-        </InArgument>
-        <InArgument x:TypeArguments="sd:DataTable" x:Key="bigItemListFromDB">
-          <VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="bigItemList" />
-        </InArgument>
-        <InArgument x:TypeArguments="sd:DataTable" x:Key="vgItemListFromDB">
-          <VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="vgItemList" />
-        </InArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="itemColLen">[itemColumnLength]</InArgument>
+        <InArgument x:TypeArguments="sd:DataTable" x:Key="otkFullDT">[otkfulldt]</InArgument>
+        <InArgument x:TypeArguments="sd:DataTable" x:Key="vgFullDT">[vgfulldt]</InArgument>
+        <InArgument x:TypeArguments="sd:DataTable" x:Key="bigFullDT">[bigfulldt]</InArgument>
+        <InArgument x:TypeArguments="sd:DataTable" x:Key="otkItemsListFromDB">[otkItemList]</InArgument>
+        <InArgument x:TypeArguments="sd:DataTable" x:Key="bigItemListFromDB">[bigItemList]</InArgument>
+        <InArgument x:TypeArguments="sd:DataTable" x:Key="vgItemListFromDB">[vgItemList]</InArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
   </Sequence>
